# overseer

./: CMakeLists.txt  README.md  build.sh  config.ini  run.sh
cmake/: OutputPaths.cmake
src/: cgw-error.cpp  cgw-error.h  cgw-ini.cpp  cgw-ini.h  cgw-log.h  cgw-settings.cpp  cgw-settings.h  cgw-types.h  cgw-uri.cpp  cgw-uri.h  cgw-utils.cpp  cgw-utils.h  main.cpp
